--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <modules>
         <module>day01</module>
         <module>day02</module>
+        <module>day03</module>
     </modules>
 
     <scm>
